another fuck wsl

--- a/src/scripts/mart_user.ipynb
+++ b/src/scripts/mart_user.ipynb
@@ -310,16 +310,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 58:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----------+----------+--------------------+------------+--------------------+--------------------+\n",
+      "|user_id|  act_city| home_city|        travel_array|travel_count|          local_time|          local_time|\n",
+      "+-------+----------+----------+--------------------+------------+--------------------+--------------------+\n",
+      "|      1| Toowoomba|      NULL| [Hobart, Toowoomba]|           2|2021-03-30 06:28:...|2021-03-30 06:28:...|\n",
+      "|    100|  Maitland|      NULL| [Bunbury, Maitland]|           2| 2022-01-21 06:10:39| 2022-01-21 06:10:39|\n",
+      "|   1000| Newcastle|      NULL|[Cairns, Cairns, ...|           7|2021-01-03 12:41:...|2021-01-03 12:41:...|\n",
+      "|  10000|  Brisbane|  Brisbane|[Brisbane, Launce...|           5|2021-01-24 05:33:...|2021-01-24 05:33:...|\n",
+      "| 100000|    Sydney|      NULL|    [Sydney, Sydney]|           2|2021-03-20 07:14:...|2021-03-20 07:14:...|\n",
+      "| 100001|Townsville|Townsville|[Townsville, Town...|           2|2021-03-14 14:22:...|2021-03-14 14:22:...|\n",
+      "| 100002|    Darwin|    Darwin|[Canberra, Darwin...|           3|2021-01-17 06:17:...|2021-01-17 06:17:...|\n",
+      "| 100003|  Maitland|      NULL|          [Maitland]|           1|2021-01-24 11:14:...|2021-01-24 11:14:...|\n",
+      "| 100004|Gold Coast|      NULL|[Gold Coast, Gold...|           5|2021-02-15 11:40:...|2021-02-15 11:40:...|\n",
+      "| 100005|  Brisbane|      NULL|          [Brisbane]|           1|2021-06-10 19:54:...|2021-06-10 19:54:...|\n",
+      "| 100006|Cranbourne|      NULL|[Newcastle, Perth...|           3|2021-03-19 21:12:...|2021-03-19 21:12:...|\n",
+      "| 100007|   Ipswich|      NULL|[Ipswich, Ipswich...|          13|2021-05-11 18:56:...|2021-05-11 18:56:...|\n",
+      "| 100008|   Geelong|   Geelong|[Geelong, Geelong...|           3|2021-02-10 02:59:...|2021-02-10 02:59:...|\n",
+      "| 100009| Newcastle|      NULL|[Newcastle, Newca...|           3|2021-04-17 21:52:...|2021-04-17 21:52:...|\n",
+      "|  10001|    Hobart|      NULL|[Cairns, Cairns, ...|           4|2021-03-20 14:32:...|2021-03-20 14:32:...|\n",
+      "| 100010|   Bendigo|      NULL|           [Bendigo]|           1| 2022-04-01 23:29:16| 2022-04-01 23:29:16|\n",
+      "| 100011|  Brisbane|      NULL|          [Brisbane]|           1|2021-03-10 16:31:...|2021-03-10 16:31:...|\n",
+      "| 100012|  Brisbane|      NULL|[Brisbane, Brisba...|           3|2021-03-06 17:39:...|2021-03-06 17:39:...|\n",
+      "| 100013|   Bendigo|      NULL|[Melbourne, Melbo...|           9|2021-02-02 20:07:...|2021-02-02 20:07:...|\n",
+      "| 100014|Gold Coast|      NULL|[Gold Coast, Gold...|           3|2021-01-12 09:58:...|2021-01-12 09:58:...|\n",
+      "+-------+----------+----------+--------------------+------------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "mart_user = mart_user.join(user_last_message_local_time, on=\"user_id\", how=\"left\")"
+    "mart_user = mart_user.join(user_last_message_local_time, on=\"user_id\", how=\"left\")\n",
+    "\n",
+    "mart_user.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +492,7 @@
     }
    ],
    "source": [
-    "mart_user.write.mode(\"overwrite\").partitionBy().format(\"parquet\").save(f\"{OUT_PATH}/mart_user\")"
+    "mart_user.write.mode(\"overwrite\").partitionBy(\"\").format(\"parquet\").save(f\"{OUT_PATH}/mart_user\")"
    ]
   }
  ],
