--- a/src/scripts/mart_zones_debag.ipynb
+++ b/src/scripts/mart_zones_debag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6783912d",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
     "from pyspark.sql import SparkSession, functions as F\n",
     "import logging\n",
     "\n",
-    "from utils import read_geo, read_events, add_closest_city, add_distance"
+    "from utils import read_geo, read_events, add_closest_city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "aa1c5192",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "8e4c8d24",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2d1034c6",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "81e5493b",
    "metadata": {},
    "outputs": [
@@ -71,12 +71,12 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "25/02/12 17:09:02 WARN Utils: Your hostname, DESKTOP-BBBONO9 resolves to a loopback address: 127.0.1.1; using 172.20.57.228 instead (on interface eth0)\n",
-      "25/02/12 17:09:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/02/12 17:38:25 WARN Utils: Your hostname, DESKTOP-BBBONO9 resolves to a loopback address: 127.0.1.1; using 172.20.57.228 instead (on interface eth0)\n",
+      "25/02/12 17:38:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/12 17:09:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "2025-02-12 17:09:07,599 - INFO - SparkSession создан успешно.\n"
+      "25/02/12 17:38:29 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "2025-02-12 17:38:30,763 - INFO - SparkSession создан успешно.\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6a4dff16",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-12 17:09:15,036 - INFO - Geo data is read from /user/solovyovyu/geo.csv.\n"
+      "2025-02-12 17:38:36,431 - INFO - Geo data is read from /user/solovyovyu/geo.csv.\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "d9db501a",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-12 17:09:16,079 - INFO - Events message are read from /user/solovyovyu/data/geo/events.\n"
+      "2025-02-12 17:38:37,217 - INFO - Events message are read from /user/solovyovyu/data/geo/events.\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "5be9478f",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-12 17:09:16,698 - INFO - Events reaction are read from /user/solovyovyu/data/geo/events.\n"
+      "2025-02-12 17:38:37,486 - INFO - Events reaction are read from /user/solovyovyu/data/geo/events.\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "ebce524e",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-12 17:09:17,140 - INFO - Events subscription are read from /user/solovyovyu/data/geo/events.\n"
+      "2025-02-12 17:38:37,769 - INFO - Events subscription are read from /user/solovyovyu/data/geo/events.\n"
      ]
     }
    ],
@@ -166,17 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6b95cb56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "message_with_distance = add_distance(messages_df, geo_df, logger)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "3426666e",
    "metadata": {},
    "outputs": [
@@ -184,51 +174,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 7:=====================================================> (196 + 1) / 200]\r"
+      "25/02/12 17:38:53 WARN CacheManager: Asked to cache already cached data.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+-------+--------------------+-----------+-------------------+\n",
-      "|message_id|user_id|            datetime|       city|           timezone|\n",
-      "+----------+-------+--------------------+-----------+-------------------+\n",
-      "|      1519|  78470|2021-05-04 00:22:...|    Bendigo|Australia/Melbourne|\n",
-      "|      7802| 117522|2021-05-05 21:19:...|   Brisbane| Australia/Brisbane|\n",
-      "|     27461|   5193|2021-05-05 11:27:...|   Adelaide| Australia/Adelaide|\n",
-      "|     66514|  99491|2021-05-04 21:49:...|  Melbourne|Australia/Melbourne|\n",
-      "|     86571|  77248|2021-05-05 11:28:...|    Bendigo|Australia/Melbourne|\n",
-      "|    144030| 118361|2021-05-05 20:38:...|     Darwin|   Australia/Darwin|\n",
-      "|    213311| 139927|2021-05-04 13:59:...|      Perth|    Australia/Perth|\n",
-      "|    224842|  95820|2021-05-05 17:28:...|   Brisbane| Australia/Brisbane|\n",
-      "|    234156| 120215|2021-05-05 12:26:...| Cranbourne|Australia/Melbourne|\n",
-      "|    236513|  46233|2021-05-04 19:11:...|     Cairns| Australia/Brisbane|\n",
-      "|    257217|  32179|2021-05-04 23:53:...|   Brisbane| Australia/Brisbane|\n",
-      "|    275626|   5247|2021-05-04 11:43:...|     Cairns| Australia/Brisbane|\n",
-      "|    283604|  21395|2021-05-03 22:46:...|     Mackay| Australia/Brisbane|\n",
-      "|    292632|  13221|2021-05-05 16:31:...|     Mackay| Australia/Brisbane|\n",
-      "|    385629| 160607|2021-05-03 08:07:...| Townsville| Australia/Brisbane|\n",
-      "|    397684| 149176|2021-05-03 06:44:...|  Melbourne|Australia/Melbourne|\n",
-      "|    408075|  33096|2021-05-05 06:05:...|   Canberra|   Australia/Sydney|\n",
-      "|    449360| 155648|2021-05-04 12:27:...|Rockhampton| Australia/Brisbane|\n",
-      "|    465892|  46233|2021-05-05 02:44:...|   Adelaide| Australia/Adelaide|\n",
-      "|    514444| 156494|2021-05-03 02:04:...|  Newcastle|   Australia/Sydney|\n",
-      "+----------+-------+--------------------+-----------+-------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+     "ename": "PythonException",
+     "evalue": "\n  An exception was thrown from the Python worker. Please see the stack trace below.\nTraceback (most recent call last):\n  File \"/home/samogonn/projects/de-project-sprint-7/src/scripts/utils.py\", line 3, in <module>\n    from timezonefinder import TimezoneFinder\nModuleNotFoundError: No module named 'timezonefinder'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPythonException\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m messages_with_city \u001b[38;5;241m=\u001b[39m add_closest_city(messages_df, geo_df, logger)\n\u001b[1;32m      3\u001b[0m messages_with_city\u001b[38;5;241m.\u001b[39mcache()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mmessages_with_city\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/de-project-sprint-7/.venv/lib/python3.12/site-packages/pyspark/sql/dataframe.py:947\u001b[0m, in \u001b[0;36mDataFrame.show\u001b[0;34m(self, n, truncate, vertical)\u001b[0m\n\u001b[1;32m    887\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mshow\u001b[39m(\u001b[38;5;28mself\u001b[39m, n: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m, truncate: Union[\u001b[38;5;28mbool\u001b[39m, \u001b[38;5;28mint\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, vertical: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    888\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Prints the first ``n`` rows to the console.\u001b[39;00m\n\u001b[1;32m    889\u001b[0m \n\u001b[1;32m    890\u001b[0m \u001b[38;5;124;03m    .. versionadded:: 1.3.0\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    945\u001b[0m \u001b[38;5;124;03m    name | Bob\u001b[39;00m\n\u001b[1;32m    946\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 947\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_show_string\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtruncate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvertical\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m~/projects/de-project-sprint-7/.venv/lib/python3.12/site-packages/pyspark/sql/dataframe.py:965\u001b[0m, in \u001b[0;36mDataFrame._show_string\u001b[0;34m(self, n, truncate, vertical)\u001b[0m\n\u001b[1;32m    959\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m PySparkTypeError(\n\u001b[1;32m    960\u001b[0m         error_class\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNOT_BOOL\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    961\u001b[0m         message_parameters\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marg_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvertical\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marg_type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mtype\u001b[39m(vertical)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m},\n\u001b[1;32m    962\u001b[0m     )\n\u001b[1;32m    964\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(truncate, \u001b[38;5;28mbool\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m truncate:\n\u001b[0;32m--> 965\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshowString\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvertical\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    966\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    967\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "File \u001b[0;32m~/projects/de-project-sprint-7/.venv/lib/python3.12/site-packages/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/projects/de-project-sprint-7/.venv/lib/python3.12/site-packages/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mPythonException\u001b[0m: \n  An exception was thrown from the Python worker. Please see the stack trace below.\nTraceback (most recent call last):\n  File \"/home/samogonn/projects/de-project-sprint-7/src/scripts/utils.py\", line 3, in <module>\n    from timezonefinder import TimezoneFinder\nModuleNotFoundError: No module named 'timezonefinder'\n"
      ]
     }
    ],
    "source": [
-    "messages_with_city = add_closest_city(message_with_distance, logger)\n",
+    "messages_with_city = add_closest_city(messages_df, geo_df, logger)\n",
     "\n",
     "messages_with_city.cache()\n",
     "\n",
